[package]
name = "metaphor-ssbp-to-sspj"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
ddsfile = "0.5.2"
glam = "0.30"
image = "0.25"
image_dds = "0.7.2"
metaphor-apk-rs = { git = "https://github.com/rirurin/metaphor-apk-rs" }
rayon = "1.11.0"
ssbp6-lib = { path = "../ssbp6-lib" }
walkdir = "2"